--- a/src/app/preferences/preferences.component.html
+++ b/src/app/preferences/preferences.component.html
@@ -1,12 +1,17 @@
 <!-- preferences.component.html -->
 <form #preferencesForm="ngForm" (ngSubmit)="onSubmit(preferencesForm.value)">
-    <div>
-      <label for="brightness">Brightness:</label>
-      <input type="number" id="brightness" name="brightness" [(ngModel)]="preferences.brightness" required>
-    </div>
-    <div>
-      <label for="zip">Zip Code:</label>
-      <input type="text" id="zip" name="zip" [(ngModel)]="preferences.zip" pattern="[0-9]{5}" required>
-    </div>
-    <button type="submit">Save Preferences</button>
-  </form>
+  <div class="field">
+    <mat-label class="label">Brightness</mat-label>
+    <mat-slider min="0" max="100" step="1" name="brightness"  required>
+    <input matSliderThumb [(ngModel)]="preferences.brightness" name="brightness">
+    </mat-slider>
+    <span>{{ preferences.brightness }}</span>
+  </div>
+  <div class="field">
+    <mat-form-field>
+      <mat-label class="label">Zip Code</mat-label>
+      <input matInput type="number" name="zip" [(ngModel)]="preferences.zip" required>
+    </mat-form-field>
+  </div>
+  <button mat-raised-button type="submit">Save Preferences</button>
+</form>
